this is fucking ridiculous

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,7 +1,11 @@
 ---
 application.js: application-dae18fcb232d3ead97177b7ce521ea55.js
+jquery-1.7.1.min.js: jquery-1.7.1.min-28838d39a47b4d159037a23a1dc320dd.js
+jquery-ui-1.8.18.custom.min.js: jquery-ui-1.8.18.custom.min-81a282c1d2893c59272c96da1d3d7e51.js
+jquery.defaultvalue.js: jquery.defaultvalue-b902139187bc4fe32c1bd76766f620c4.js
 modernizr.js: modernizr-5375f18e2f68bf6dca38ade839eebbff.js
 selectivizr-min.js: selectivizr-min-6818eeb803f1594bbd0d56aae3c258eb.js
+site.js: site-cbb6822c62d0b709716bf0c547c52556.js
 git-scm.css: git-scm-1e1c904a6d1f2e7f86f841d76d1bcc13.css
 twitter/bootstrap/glyphicons-halflings-white.png: twitter/bootstrap/glyphicons-halflings-white-4fbb6a0b9b4e61912f486ac494a858f1.png
 twitter/bootstrap/glyphicons-halflings.png: twitter/bootstrap/glyphicons-halflings-2ed0cba6eca0f44737ab78f1e58bc11e.png
