Ignore bundler residue

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@
 #   git config --global core.excludesfile ~/.gitignore_global
 
 # Ignore bundler config
+.rbenv-version
 /.bundle
+/bin
+/vendor/gems
 
 # Ignore the default SQLite database.
 /db/*.sqlite3*
