Replace old asciidoc with asciidoctor gem

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile ~/.gitignore_global
 
-# Ignore bundler config
 .rbenv-version
+.env
+
+# Ignore bundler config
 /.bundle
 /bin
 /vendor/gems
