--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -5,17 +5,10 @@ production:
   timeout: 5000
 
 development:
-  adapter: postgresql
-  database: gitscm_development
-  host: localhost
+  adapter: sqlite3
+  database: db/development.sqlite3
   pool: 5
   timeout: 5000
-
-# development:
-#   adapter: sqlite3
-#   database: db/development.sqlite3
-#   pool: 5
-#   timeout: 5000
 
 test:
   adapter: sqlite3
