--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "git-scm",
   "version": "1.0.0",
   "homepage": "http://git-scm.com",
+  "scss": "./app/assets/stylesheets/git-scm.css.scss",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~2.2.0",
