--- a/app/assets/stylesheets/.scss-lint.yml
+++ b/app/assets/stylesheets/.scss-lint.yml
@@ -7,6 +7,19 @@
 # below is our settings.
 
 linters:
+
+  # TODO: get rid of these
+  ImportantRule:
+    enabled: false
+
+  VendorPrefix:
+    enabled: false
+
+  NestingDepth:
+    enabled: false
+
+  ######################################
+
   BorderZero:
     enabled: true
     severity: error
@@ -374,7 +387,8 @@ linters:
     severity: error
 
   SelectorDepth:
-    enabled: true
+    # enabled: true
+    enabled: false
     max_depth: 4
     severity: error
 
@@ -443,7 +457,8 @@ linters:
     severity: error
 
   VendorPrefixes:
-    enabled: true
+    # enabled: true
+    enabled: false
     identifier_list: base
     severity: error
 
