Add android and ios GUI sections

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -181,4 +181,28 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
+  order: 21
+- name: Pocket Git
+  url: http://pocketgit.com/
+  image_tag: guis/pocketgit@2x.png
+  platforms:
+    - Android
+  price: 1.99€
+  license: Proprietary
+  order: 23
+- name: Git2Go
+  url: https://git2go.com/
+  image_tag: guis/git2go@2x.png
+  platforms:
+    - iOS
+  price: Free with in-app purchases
+  license: Proprietary
+  order: 22
+- name: Working Copy
+  url: https://workingcopyapp.com/
+  image_tag: guis/workingcopy@2x.png
+  platforms:
+    - iOS
+  price: Free with in-app purchases
+  license: Proprietary
   order: 20
