Adding GitDrive to GUI clients Adding new items in guis.yml and new images for GitDrive by following the instruction 'Adding new GUI'

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -206,3 +206,11 @@ guis:
   price: Free with in-app purchases
   license: Proprietary
   order: 20
+- name: GitDrive
+  url: http://gitdrive.com/
+  image_tag: guis/gitdrive@2x.png
+  platforms:
+    - iOS
+  price: Free with in-app purchases
+  license: Proprietary
+  order: 24
