--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -153,7 +153,7 @@ guis:
   - Windows
   - Mac
   - Linux
-  price: "$29/user (Free 15 day trial)"
+  price: Free for non-commercial use
   license: Proprietary
   order: 17
 - name: GitX-dev
