Modified the guis.yml file to add gmaster as specified on the repository README.

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -214,3 +214,11 @@ guis:
   price: Free with in-app purchases
   license: Proprietary
   order: 24
+- name: gmaster
+  url: https://gmaster.io/
+  image_tag: guis/gmaster@2x.png
+  platforms:
+    - Windows
+  price: "Beta / Free for non-commercial use"
+  license: Propietary
+  order: 25
