Fixed a typo in gmaster's license type :( from "Propietary" to "Proprietary".

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -180,7 +180,7 @@ guis:
   platforms:
     - Windows
   price: "Beta / Free for non-commercial use"
-  license: Propietary
+  license: Proprietary
   order: 20
 - name: Git2Go
   url: https://git2go.com/
