Add stylelint and config

--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "grunt-parker": "~0.1.0",
     "grunt-sass": "~0.18.0",
     "grunt-contrib-watch": "~0.6.1"
+  },
+  "dependencies": {
+    "stylelint": "7.13.0",
+    "stylelint-config-primer": "2.2.3"
   }
 }
