--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~2.2.0",
-    "grunt-build-control": "~0.2.0",
     "grunt-parker": "~0.1.0",
-    "grunt-sass": "~0.18.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-stylelint": "^0.9.0"
   },
   "dependencies": {
     "stylelint": "7.13.0",
