--- a/package.json
+++ b/package.json
@@ -1,16 +1,34 @@
 {
   "name": "git-scm",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "homepage": "https://git-scm.com",
-  "scss": "./app/assets/stylesheets/git-scm.css.scss",
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "~2.2.0",
-    "grunt-parker": "~0.1.0",
-    "grunt-stylelint": "^0.9.0"
+  "scripts": {
+    "clean": "rimraf app/assets/stylesheets/index.css",
+    "scss": "node-sass --output-style compressed -o app/assets/stylesheets app/assets/stylesheets/src/index.scss",
+    "lint": "eslint js || true",
+    "serve": "browser-sync start --proxy localhost:3000 --files \"app/assets/stylesheets/*.css, dist/*.js, **/*.html, !node_modules/**/*.html\"",
+    "start": "serve .",
+    "build:css": "run-s scss",
+    "build:js": "run-s lint",
+    "build": "run-s build:*",
+    "watch:css": "onchange \"app/assets/stylesheets/src\" -- run-s build:css",
+    "watch:js": "onchange \"js\" -- run-s build:js",
+    "watch": "run-p serve watch:*"
   },
-  "dependencies": {
-    "stylelint": "^7.13.0",
-    "stylelint-config-primer": "2.2.3"
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "browser-sync": "^2.12.8",
+    "eslint": "^2.10.2",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-promise": "^1.3.0",
+    "eslint-plugin-standard": "^1.3.2",
+    "mkdirp": "^0.5.1",
+    "node-sass": "^4.7.2",
+    "normalize.css": "^7.0.0",
+    "npm-run-all": "^2.1.1",
+    "onchange": "^2.4.0",
+    "postcss-cli": "^2.5.2",
+    "rimraf": "^2.5.4",
+    "stylelint": "^7.8.0"
   }
 }
