--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "2.0.0",
   "homepage": "https://git-scm.com",
   "scripts": {
+    "babel": "babel --presets=env app/assets/javascripts/src/index.js --out-dir app/assets/javascripts",
     "clean": "rimraf app/assets/stylesheets/index.css",
     "scss": "node-sass --output-style compressed -o app/assets/stylesheets app/assets/stylesheets/src/index.scss",
     "lint": "eslint js || true",
     "serve": "browser-sync start --proxy localhost:3000 --files \"app/assets/stylesheets/*.css, dist/*.js, **/*.html, !node_modules/**/*.html\"",
     "start": "serve .",
     "build:css": "run-s scss",
-    "build:js": "run-s lint",
+    "build:js": "run-s lint babel",
     "build": "run-s build:*",
     "watch:css": "onchange \"app/assets/stylesheets/src\" -- run-s build:css",
-    "watch:js": "onchange \"js\" -- run-s build:js",
+    "watch:js": "onchange \"app/assets/javascripts/src\" -- run-s build:js",
     "watch": "run-p serve watch:*"
+  },
+  "dependencies": {
+    "delegated-events": "1.0.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.12.8",
     "eslint": "^2.10.2",
     "eslint-config-standard": "^5.3.1",
