Fix browser-sync config

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf app/assets/stylesheets/index.css",
     "scss": "node-sass --output-style compressed -o app/assets/stylesheets app/assets/stylesheets/src/index.scss",
     "lint": "eslint js || true",
-    "serve": "browser-sync start --proxy localhost:3000 --files \"app/assets/stylesheets/*.css, dist/*.js, **/*.html, !node_modules/**/*.html\"",
+    "serve": "browser-sync start --proxy localhost:3000 --files \"app/assets/stylesheets/*.css, app/assets/javascripts/*.js, **/*.html.erb, !node_modules/**/*.html\"",
     "start": "serve .",
     "build:css": "run-s scss",
     "build:js": "run-s lint babel",
