--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "watch": "run-p serve watch:*"
   },
   "dependencies": {
-    "delegated-events": "1.0.5"
+    "@rails/webpacker": "^3.2.2",
+    "delegated-events": "1.0.5",
+    "tachyons": "^4.9.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -34,6 +36,8 @@
     "onchange": "^2.4.0",
     "postcss-cli": "^2.5.2",
     "rimraf": "^2.5.4",
-    "stylelint": "^7.8.0"
+    "stylelint": "^7.8.0",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.0.0"
   }
 }
