--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ config/database.yml
 /public/*.zip
 
 node_modules/
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
