--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss-cli": "^2.5.2",
     "rimraf": "^2.5.4",
     "stylelint": "^7.8.0",
+    "stylelint-config-primer": "^2.2.4",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.0.0"
   }
