Update Travis CI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: ruby
-script: 'script/travis-ci'
-rvm:
-  - 2.4.2
-notifications:
-  email: false
+
+sudo: false
+
+before_script:
+  - bundle exec rake db:create db:schema:load
+
+bundler_args: --without development production
 
 cache:
   bundler: true
 
-sudo: false
+notifications:
+  email: false
