--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: false
 before_script:
   - bundle exec rake db:create db:schema:load
 
-bundler_args: --without development production
+bundler_args: --without development production --jobs=3 --retry=3
 
 cache:
   bundler: true
