--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "eslint-plugin-promise": "^1.3.0",
     "eslint-plugin-standard": "^1.3.2",
     "mkdirp": "^0.5.1",
-    "node-sass": "^4.7.2",
-    "normalize.css": "^7.0.0",
+    "node-sass": "^4.8.1",
     "npm-run-all": "^2.1.1",
     "onchange": "^2.4.0",
     "postcss-cli": "^2.5.2",
     "rimraf": "^2.5.4",
+    "sass-loader": "^6.0.7",
     "stylelint": "^7.8.0",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.0.0"
