Move sass-loader to be a regular dependency

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@rails/webpacker": "^3.2.2",
     "delegated-events": "1.0.5",
-    "tachyons": "^4.9.1"
+    "tachyons": "^4.9.1",
+    "sass-loader": "^6.0.7"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -35,7 +36,6 @@
     "onchange": "^2.4.0",
     "postcss-cli": "^2.5.2",
     "rimraf": "^2.5.4",
-    "sass-loader": "^6.0.7",
     "stylelint": "^7.8.0",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.0.0"
