--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -228,7 +228,9 @@ guis:
   url: https://gitblade.com
   image_tag: guis/gitblade@2x.png
   platforms:
-  - Linux, Mac, Windows
+    - Linux
+    - Mac
+    - Windows
   price: 14.99€
   license: Proprietary
   order: 26
