Add new GUI app "Guitar"

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -233,3 +233,13 @@ guis:
   price: 14.99€
   license: Proprietary
   order: 26
+- name: Guitar
+  url: https://github.com/soramimi/Guitar
+  image_tag: guis/guitar@2x.png
+  platforms:
+  - Windows
+  - Mac
+  - Linux
+  price: Free
+  license: GNU GPL
+  order: 27
