Add RepoZ images

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -245,7 +245,7 @@ guis:
   order: 27
 - name: RepoZ
   url: https://github.com/awaescher/RepoZ/
-  image_tag: guis/RepoZ@2x.png
+  image_tag: guis/repoz@2x.png
   platforms:
   - Windows
   - Mac
