GitAtomic added to the list of git GUI clients

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -252,3 +252,11 @@ guis:
   price: Free
   license: MIT
   order: 28
+- name: GitAtomic
+  url: https://gitatomic.bitbucket.io/
+  image_tag: guis/gitatomic@2x.png
+  platforms:
+  - Windows
+  price: 15.00€
+  license: Proprietary
+  order: 29
