Add Windows platform to Fork git client
Make screenshots up-to-date

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -153,6 +153,7 @@ guis:
   url: https://git-fork.com/
   image_tag: guis/fork@2x.png
   platforms:
+  - Windows
   - Mac
   price: Free
   license: Proprietary
