--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -231,7 +231,8 @@ guis:
   image_tag: guis/gitblade@2x.png
   platforms:
     - Linux
-  price: 14.99€
+    - Windows
+  price: 6.99€
   license: Proprietary
   order: 26
 - name: Guitar
