Add Sublime Merge to the list of GUI clients

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -262,3 +262,13 @@ guis:
   price: 15.00€
   license: Proprietary
   order: 29
+- name: Sublime Merge
+  url: https://www.sublimemerge.com
+  image_tag: guis/smerge@2x.png
+  platforms:
+  - Windows
+  - Mac
+  - Linux
+  price: "$99/user, $75 annual business sub, free eval"
+  license: Proprietary
+  order: 30
