--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "watch": "run-p serve watch:*"
   },
   "dependencies": {
-    "@rails/webpacker": "^3.2.2",
+    "@rails/webpacker": "3.5",
     "delegated-events": "1.0.5",
-    "tachyons": "^4.9.1",
-    "sass-loader": "^6.0.7"
+    "sass-loader": "^6.0.7",
+    "tachyons": "^4.9.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -38,6 +38,6 @@
     "rimraf": "^2.5.4",
     "stylelint": "^7.8.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.0.0"
+    "webpack-dev-server": "2.11.2"
   }
 }
