Only using 2nd edition going forward

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,19 @@
 default: &default
+  adapter: postgresql
+  encoding: unicode
+
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
-local: &local
-  <<: *default
-  adapter: sqlite3
-  timeout: 5000
+  pool: <%= ENV["DB_POOL"] || ENV["RAILS_MAX_THREADS"] || 5 %>
 
 development:
-  <<: *local
-  database: db/development.sqlite3
+  <<: *default
+  database: gitscm_development
 
 test:
-  <<: *local
-  database: db/test.sqlite3
+  <<: *default
+  database: gitscm_test
 
 production:
   <<: *default
-  adapter: postgresql
-  encoding: unicode
   url: <%= ENV['DATABASE_URL'] %>
