Add GitFinder to the list of GUI clients

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -272,3 +272,11 @@ guis:
   price: "$99/user, $75 annual business sub, free eval"
   license: Proprietary
   order: 30
+- name: GitFinder
+  url: https://gitfinder.com
+  image_tag: guis/gitfinder@2x.png
+  platforms:
+  - Mac
+  price: "$24.95"
+  license: Proprietary
+  order: 31
