Add SnailGit to the list of GUI clients

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -273,6 +273,14 @@ guis:
   price: "$99/user, $75 annual business sub, free eval"
   license: Proprietary
   order: 30
+- name: SnailGit
+  url: https://langui.net/snailgit/
+  image_tag: guis/snailgit@2x.png
+  platforms:
+  - Mac
+  price: "$9.99 / Lite version"
+  license: Proprietary
+  order: 31
 - name: GitFinder
   url: https://gitfinder.com
   image_tag: guis/gitfinder@2x.png
@@ -280,4 +288,4 @@ guis:
   - Mac
   price: "$24.95"
   license: Proprietary
-  order: 31
+  order: 32
