Add Gitfox macOS GUI client

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -289,3 +289,11 @@ guis:
   price: "$24.95"
   license: Proprietary
   order: 32
+- name: Gitfox
+  url: https://www.gitfox.app
+  image_tag: guis/gitfox@2x.png
+  platforms:
+  - Mac
+  price: Free (Beta)
+  license: Proprietary
+  order: 33
