Update GitKraken price
https://www.gitkraken.com/pricing indicates $49 / year. Hovering over the question mark under the 'free' description says commercial work is anything you get paid for, but there's an exception for 'startups in their first year of existence'

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -43,7 +43,7 @@ guis:
   - Windows
   - Mac
   - Linux
-  price: Free for non-commercial use
+  price: $49 / user / Free for non-commercial use and commercial startups less than a year old
   license: Proprietary
   order: 5
 - name: SmartGit
