shorten over-length line
and also change the spacing around 49 / user to match the no-space on tower and smartgit

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -43,7 +43,7 @@ guis:
   - Windows
   - Mac
   - Linux
-  price: $49 / user / Free for non-commercial use and commercial startups less than a year old
+  price: $49/user / Free for non-commercial use
   license: Proprietary
   order: 5
 - name: SmartGit
