--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -290,7 +290,7 @@ guis:
   license: Proprietary
   order: 32
 - name: Gitfox
-  url: https://www.gitfox.app
+  url: https://beta.gitfox.app
   image_tag: guis/gitfox@2x.png
   platforms:
   - Mac
