Updated GitBlade client: - added Mac support - updated price

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -232,8 +232,9 @@ guis:
   image_tag: guis/gitblade@2x.png
   platforms:
     - Linux
+    - Mac
     - Windows
-  price: 6.99€
+  price: Free Lite version, $59.99/user/year for PRO version
   license: Proprietary
   order: 26
 - name: Guitar
