Add nitrogit.net GUI client for Windows

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -298,3 +298,11 @@ guis:
   price: Free (Beta)
   license: Proprietary
   order: 33
+- name: NitroGit
+  url: http://nitrogit.net
+  image_tag: guis/nitrogit@2x.png
+  platforms:
+  - Windows
+  price: "20€/user / Free for non-commercial use"
+  license: Proprietary
+  order: 34
