--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -306,3 +306,12 @@ guis:
   price: "20€/user / Free for non-commercial use"
   license: Proprietary
   order: 34
+- name: GitFiend
+  url: https://gitfiend.com
+  image_tag: guis/gitfiend@2x.png
+  platforms:
+  - Windows
+  - Mac
+  price: Free
+  license: Proprietary
+  order: 35
