Update gitfox info and screenshots

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -291,11 +291,11 @@ guis:
   license: Proprietary
   order: 32
 - name: Gitfox
-  url: https://beta.gitfox.app
+  url: https://www.gitfox.app
   image_tag: guis/gitfox@2x.png
   platforms:
   - Mac
-  price: Free (Beta)
+  price: "29€/user"
   license: Proprietary
   order: 33
 - name: NitroGit
