add cong to guis.yml

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -316,3 +316,11 @@ guis:
   price: Free
   license: Proprietary
   order: 35
+- name: Cong
+  url: http://cong.tools/
+  image_tag: guis/cong@2x.png
+  platforms:
+  - Windows
+  price: Free
+  license: Proprietary
+  order: 36
