--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "grunt": "^1.0.3",
     "grunt-autoprefixer": "~2.2.0",
     "grunt-parker": "^0.2.0",
-    "grunt-stylelint": "^0.9.0"
-  },
-  "dependencies": {
+    "grunt-stylelint": "^0.9.0",
     "@primer/css": "^14.2.0",
     "stylelint": "^13.0.0",
     "stylelint-config-primer": "^9.0.0"
