Update Gitfox guis entry

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -295,7 +295,7 @@ guis:
   image_tag: guis/gitfox@2x.png
   platforms:
   - Mac
-  price: "29€/user"
+  price: "€3.99/m or €24,99/y per user"
   license: Proprietary
   order: 33
 - name: NitroGit
