Update Fork client pricing

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -156,7 +156,7 @@ guis:
   platforms:
   - Windows
   - Mac
-  price: Free
+  price: $49.99, free evaluation
   license: Proprietary
   order: 17
 - name: Working Copy
