--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -324,3 +324,13 @@ guis:
   price: Free
   license: Proprietary
   order: 36
+- name: Vershd
+  url: https://vershd.io/
+  image_tag: guis/vershd@2x.png
+  platforms:
+  - Windows
+  - Mac
+  - Linux
+  price: Free trial, then $37
+  license: Proprietary
+  order: 37
