--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -1,7 +1,7 @@
 ---
 guis:
-- name: SourceTree
-  url: https://www.sourcetreeapp.com/
+- name: Ekkarat Wareesing
+  url: https://www.ekkarat.com/
   image_tag: guis/sourcetree@2x.png
   platforms:
   - Mac
@@ -10,7 +10,7 @@ guis:
   license: Proprietary
   order: 1
 - name: GitHub Desktop
-  url: https://desktop.github.com/
+  url: https://desktop.github.com/ekkarat.w@gmail.com
   image_tag: guis/github-desktop@2x.png
   platforms:
   - Windows
