Add GitUI client

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -334,3 +334,13 @@ guis:
   price: Free trial, then $37
   license: Proprietary
   order: 37
+- name: GitUI
+  url: https://extrawurst.itch.io/gitui
+  image_tag: guis/gitui@2x.png
+  platforms:
+  - Windows
+  - Mac
+  - Linux
+  price: Name your own price
+  license: MIT
+  order: 38
