--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -341,6 +341,6 @@ guis:
   - Windows
   - Mac
   - Linux
-  price: Name your own price
+  price: Free, but donations welcome
   license: MIT
   order: 38
