Add lazygit to list of guis

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -344,3 +344,13 @@ guis:
   price: Free, but donations welcome
   license: MIT
   order: 38
+- name: LazyGit
+  url: https://github.com/jesseduffield/lazygit
+  image_tag: guis/lazygit@2x.png
+  platforms:
+  - Windows
+  - Mac
+  - Linux
+  price: Free
+  license: MIT
+  order: 39
