--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -46,6 +46,16 @@ guis:
   price: Free / $29 / $49
   license: Proprietary
   order: 5
+- name: Magit
+  url: https://magit.vc
+  image_tag: guis/magit@2x.png
+  platforms:
+  - Windows
+  - Mac
+  - Linux
+  price: Free
+  license: GNU GPL
+  order: 6
 - name: SmartGit
   url: https://www.syntevo.com/smartgit/
   image_tag: guis/smartgit@2x.png
@@ -55,7 +65,7 @@ guis:
   - Linux
   price: "$79/user / Free for non-commercial use"
   license: Proprietary
-  order: 6
+  order: 7
 - name: Tower
   url: https://www.git-tower.com/
   image_tag: guis/tower@2x.png
@@ -65,7 +75,7 @@ guis:
   price: " $79/user (Free 30 day trial)"
   license: Proprietary
   trend_name: git tower
-  order: 7
+  order: 8
 - name: GitUp
   url: http://gitup.co/
   image_tag: guis/gitup@2x.png
@@ -73,7 +83,7 @@ guis:
   - Mac
   price: Free
   license: GNU GPL
-  order: 8
+  order: 9
 - name: GitEye
   url: http://www.giteyeapp.com/
   image_tag: guis/giteye@2x.png
@@ -83,7 +93,7 @@ guis:
   - Linux
   price: Free
   license: Proprietary
-  order: 9
+  order: 10
 - name: gitg
   url: https://wiki.gnome.org/Apps/Gitg/
   image_tag: guis/gitg@2x.png
@@ -92,7 +102,7 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 10
+  order: 11
 - name: ungit
   url: https://github.com/FredrikNoren/ungit
   image_tag: guis/ungit@2x.png
@@ -102,7 +112,7 @@ guis:
   - Linux
   price: Free
   license: MIT
-  order: 11
+  order: 12
 - name: git-cola
   url: https://git-cola.github.io/
   image_tag: guis/git-cola@2x.png
@@ -112,7 +122,7 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 12
+  order: 13
 - name: Cycligent Git Tool
   url: https://www.cycligent.com/git-tool
   image_tag: guis/cycligent@2x.png
@@ -123,7 +133,7 @@ guis:
   price: Free
   license: Proprietary
   trend_name: Cycligent
-  order: 13
+  order: 14
 - name: giggle
   url: https://wiki.gnome.org/Apps/giggle/
   image_tag: guis/giggle@2x.png
@@ -131,7 +141,7 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 14
+  order: 15
 - name: Gitbox
   url: http://www.gitboxapp.com/
   image_tag: guis/gitbox@2x.png
@@ -139,7 +149,7 @@ guis:
   - Mac
   price: "$14.99"
   license: Proprietary
-  order: 15
+  order: 16
 - name: Aurees
   url: https://aurees.com/
   image_tag: guis/aurees@2x.png
@@ -149,7 +159,7 @@ guis:
   - Linux
   price: Free
   license: Proprietary
-  order: 16
+  order: 17
 - name: Fork
   url: https://git-fork.com/
   image_tag: guis/fork@2x.png
@@ -158,7 +168,7 @@ guis:
   - Mac
   price: $49.99, free evaluation
   license: Proprietary
-  order: 17
+  order: 18
 - name: Working Copy
   url: https://workingcopyapp.com/
   image_tag: guis/workingcopy@2x.png
@@ -166,7 +176,7 @@ guis:
     - iOS
   price: Free with in-app purchases
   license: Proprietary
-  order: 18
+  order: 19
 - name: CodeReview
   url: https://github.com/FabriceSalvaire/CodeReview/
   image_tag: guis/codereview@2x.png
@@ -176,7 +186,7 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 19
+  order: 20
 - name: gmaster
   url: https://gmaster.io/
   image_tag: guis/gmaster@2x.png
@@ -184,7 +194,7 @@ guis:
     - Windows
   price: "Beta / Free for non-commercial use"
   license: Proprietary
-  order: 20
+  order: 21
 - name: Git2Go
   url: https://git2go.com/
   image_tag: guis/git2go@2x.png
@@ -192,7 +202,7 @@ guis:
     - iOS
   price: Free with in-app purchases
   license: Proprietary
-  order: 21
+  order: 22
 - name: GitAhead
   url: https://www.gitahead.com/
   image_tag: guis/gitahead@2x.png
@@ -202,7 +212,7 @@ guis:
   - Linux
   price: Free
   license: MIT
-  order: 22
+  order: 23
 - name: Pocket Git
   url: http://pocketgit.com/
   image_tag: guis/pocketgit@2x.png
@@ -210,7 +220,7 @@ guis:
     - Android
   price: 1.99€
   license: Proprietary
-  order: 23
+  order: 24
 - name: GitDrive
   url: http://gitdrive.com/
   image_tag: guis/gitdrive@2x.png
@@ -218,7 +228,7 @@ guis:
     - iOS
   price: Free with in-app purchases
   license: Proprietary
-  order: 24
+  order: 25
 - name: GitX-dev
   url: https://rowanj.github.io/gitx/
   image_tag: guis/gitx@2x.png
@@ -226,7 +236,7 @@ guis:
   - Mac
   price: Free
   license: GNU GPL
-  order: 25
+  order: 26
 - name: GitBlade
   url: https://gitblade.com
   image_tag: guis/gitblade@2x.png
@@ -236,7 +246,7 @@ guis:
     - Windows
   price: Free Lite version, $59.99/user/year for PRO version
   license: Proprietary
-  order: 26
+  order: 27
 - name: Guitar
   url: https://github.com/soramimi/Guitar
   image_tag: guis/guitar@2x.png
@@ -246,7 +256,7 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 27
+  order: 28
 - name: RepoZ
   url: https://github.com/awaescher/RepoZ/
   image_tag: guis/repoz@2x.png
@@ -255,7 +265,7 @@ guis:
   - Mac
   price: Free
   license: MIT
-  order: 28
+  order: 29
 - name: Cong
   url: http://cong.tools/
   image_tag: guis/cong@2x.png
@@ -263,7 +273,7 @@ guis:
   - Windows
   price: Free
   license: Proprietary
-  order: 29
+  order: 30
 - name: Sublime Merge
   url: https://www.sublimemerge.com
   image_tag: guis/smerge@2x.png
@@ -273,7 +283,7 @@ guis:
   - Linux
   price: "$99/user, $75 annual business sub, free eval"
   license: Proprietary
-  order: 30
+  order: 31
 - name: LazyGit
   url: https://github.com/jesseduffield/lazygit
   image_tag: guis/lazygit@2x.png
@@ -283,7 +293,7 @@ guis:
   - Linux
   price: Free
   license: MIT
-  order: 31
+  order: 32
 - name: SnailGit
   url: https://langui.net/snailgit/
   image_tag: guis/snailgit@2x.png
@@ -291,7 +301,7 @@ guis:
   - Mac
   price: "$9.99 / Lite version"
   license: Proprietary
-  order: 32
+  order: 33
 - name: GitAtomic
   url: https://gitatomic.bitbucket.io/
   image_tag: guis/gitatomic@2x.png
@@ -299,7 +309,7 @@ guis:
   - Windows
   price: 15.00€
   license: Proprietary
-  order: 33
+  order: 34
 - name: Gitfox
   url: https://www.gitfox.app
   image_tag: guis/gitfox@2x.png
@@ -307,7 +317,7 @@ guis:
   - Mac
   price: "€3.99/m or €24,99/y per user"
   license: Proprietary
-  order: 34
+  order: 35
 - name: GitFiend
   url: https://gitfiend.com
   image_tag: guis/gitfiend@2x.png
@@ -317,7 +327,7 @@ guis:
   - Linux
   price: Free
   license: Proprietary
-  order: 35
+  order: 36
 - name: NitroGit
   url: http://nitrogit.net
   image_tag: guis/nitrogit@2x.png
@@ -325,7 +335,7 @@ guis:
   - Windows
   price: "20€/user / Free for non-commercial use"
   license: Proprietary
-  order: 36
+  order: 37
 - name: GitFinder
   url: https://gitfinder.com
   image_tag: guis/gitfinder@2x.png
@@ -333,7 +343,7 @@ guis:
   - Mac
   price: "$24.95"
   license: Proprietary
-  order: 37
+  order: 38
 - name: Vershd
   url: https://vershd.io/
   image_tag: guis/vershd@2x.png
@@ -343,7 +353,7 @@ guis:
   - Linux
   price: Free trial, then $37
   license: Proprietary
-  order: 38
+  order: 39
 - name: GitUI
   url: https://extrawurst.itch.io/gitui
   image_tag: guis/gitui@2x.png
@@ -353,4 +363,4 @@ guis:
   - Linux
   price: Free, but donations welcome
   license: MIT
-  order: 39
+  order: 40
