Add PolyGit to guis.yml

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -365,7 +365,7 @@ guis:
   license: MIT
   order: 40
 - name: PolyGit
-  url: http://polygitapp.com/
+  url: http://www.polygitapp.com
   image_tag: guis/polygit@2x.png
   platforms:
   - iOS
