--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -351,7 +351,7 @@ guis:
   - Windows
   - Mac
   - Linux
-  price: Free trial, then $37
+  price: Free for personal use, otherwise $37
   license: Proprietary
   order: 39
 - name: GitUI
