issue_template: explain manpages link
This tries to clarify why we're sending people to the "community" page
for problems with the manpage content.

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -10,7 +10,10 @@ contact_links:
 
   - name: Git documentation (man/help pages)
     url: https://git-scm.com/community
-    about: Git documentation (anything with a URL starting with https://git-scm.com/docs).
+    about: >
+      The Git documentation under https://git-scm.com/docs is imported
+      from the Git project itself. Any content problems or suggestions
+      should be reported there.
 
   - name: Pro Git 2 book content
     url: https://github.com/progit/progit2/issues
