--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -372,3 +372,13 @@ guis:
   price: Free with in-app purchases
   license: Proprietary
   order: 41
+- name: GitVine
+  url: https://insanesharpness.gitlab.io/GitVine
+  image_tag: guis/gitvine@2x.png
+  platforms:
+  - Windows
+  - Mac
+  - Linux
+  price: Free
+  license: Proprietary
+  order: 42
