Add Fugitive GUI and sort the GUI list
Also add a screenshot of the user interface.

Sort the GUI order by Google Trends using the sort-gui script. Add some
trend_name attributes to GUIs that have confusing names that may be
increasing their popularity. Use a keyword like "Git" or "client" along
with the software's name to try to disambiguate it.

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -8,7 +8,8 @@ guis:
   - Windows
   price: Free
   license: Proprietary
-  order: 1
+  trend_name: Git SourceTree
+  order: 2
 - name: GitHub Desktop
   url: https://desktop.github.com/
   image_tag: guis/github-desktop@2x.png
@@ -17,7 +18,7 @@ guis:
   - Mac
   price: Free
   license: MIT
-  order: 2
+  order: 1
 - name: TortoiseGit
   url: https://tortoisegit.org/
   image_tag: guis/tortoisegit@2x.png
@@ -83,7 +84,7 @@ guis:
   - Mac
   price: Free
   license: GNU GPL
-  order: 9
+  order: 10
 - name: GitEye
   url: http://www.giteyeapp.com/
   image_tag: guis/giteye@2x.png
@@ -93,7 +94,7 @@ guis:
   - Linux
   price: Free
   license: Proprietary
-  order: 10
+  order: 17
 - name: gitg
   url: https://wiki.gnome.org/Apps/Gitg/
   image_tag: guis/gitg@2x.png
@@ -102,7 +103,7 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 11
+  order: 14
 - name: ungit
   url: https://github.com/FredrikNoren/ungit
   image_tag: guis/ungit@2x.png
@@ -112,7 +113,7 @@ guis:
   - Linux
   price: Free
   license: MIT
-  order: 12
+  order: 15
 - name: git-cola
   url: https://git-cola.github.io/
   image_tag: guis/git-cola@2x.png
@@ -122,7 +123,7 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 13
+  order: 24
 - name: Cycligent Git Tool
   url: https://www.cycligent.com/git-tool
   image_tag: guis/cycligent@2x.png
@@ -133,7 +134,7 @@ guis:
   price: Free
   license: Proprietary
   trend_name: Cycligent
-  order: 14
+  order: 25
 - name: giggle
   url: https://wiki.gnome.org/Apps/giggle/
   image_tag: guis/giggle@2x.png
@@ -141,7 +142,8 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 15
+  trend_name: Git giggle
+  order: 27
 - name: Gitbox
   url: http://www.gitboxapp.com/
   image_tag: guis/gitbox@2x.png
@@ -149,7 +151,7 @@ guis:
   - Mac
   price: "$14.99"
   license: Proprietary
-  order: 16
+  order: 29
 - name: Aurees
   url: https://aurees.com/
   image_tag: guis/aurees@2x.png
@@ -159,7 +161,7 @@ guis:
   - Linux
   price: Free
   license: Proprietary
-  order: 17
+  order: 23
 - name: Fork
   url: https://git-fork.com/
   image_tag: guis/fork@2x.png
@@ -168,7 +170,8 @@ guis:
   - Mac
   price: $49.99, free evaluation
   license: Proprietary
-  order: 18
+  trend_name: Fork Git client
+  order: 13
 - name: Working Copy
   url: https://workingcopyapp.com/
   image_tag: guis/workingcopy@2x.png
@@ -176,7 +179,8 @@ guis:
     - iOS
   price: Free with in-app purchases
   license: Proprietary
-  order: 19
+  trend_name: Working Copy iOS
+  order: 20
 - name: CodeReview
   url: https://github.com/FabriceSalvaire/CodeReview/
   image_tag: guis/codereview@2x.png
@@ -186,7 +190,8 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 20
+  trend_name: Git CodeReview
+  order: 30
 - name: gmaster
   url: https://gmaster.io/
   image_tag: guis/gmaster@2x.png
@@ -194,7 +199,7 @@ guis:
     - Windows
   price: "Beta / Free for non-commercial use"
   license: Proprietary
-  order: 21
+  order: 19
 - name: Git2Go
   url: https://git2go.com/
   image_tag: guis/git2go@2x.png
@@ -202,7 +207,7 @@ guis:
     - iOS
   price: Free with in-app purchases
   license: Proprietary
-  order: 22
+  order: 31
 - name: GitAhead
   url: https://www.gitahead.com/
   image_tag: guis/gitahead@2x.png
@@ -212,7 +217,7 @@ guis:
   - Linux
   price: Free
   license: MIT
-  order: 23
+  order: 11
 - name: Pocket Git
   url: http://pocketgit.com/
   image_tag: guis/pocketgit@2x.png
@@ -220,7 +225,7 @@ guis:
     - Android
   price: 1.99€
   license: Proprietary
-  order: 24
+  order: 21
 - name: GitDrive
   url: http://gitdrive.com/
   image_tag: guis/gitdrive@2x.png
@@ -228,7 +233,7 @@ guis:
     - iOS
   price: Free with in-app purchases
   license: Proprietary
-  order: 25
+  order: 32
 - name: GitX-dev
   url: https://rowanj.github.io/gitx/
   image_tag: guis/gitx@2x.png
@@ -236,7 +241,7 @@ guis:
   - Mac
   price: Free
   license: GNU GPL
-  order: 26
+  order: 33
 - name: GitBlade
   url: https://gitblade.com
   image_tag: guis/gitblade@2x.png
@@ -246,7 +251,7 @@ guis:
     - Windows
   price: Free Lite version, $59.99/user/year for PRO version
   license: Proprietary
-  order: 27
+  order: 34
 - name: Guitar
   url: https://github.com/soramimi/Guitar
   image_tag: guis/guitar@2x.png
@@ -256,7 +261,8 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 28
+  trend_name: Git guitar
+  order: 16
 - name: RepoZ
   url: https://github.com/awaescher/RepoZ/
   image_tag: guis/repoz@2x.png
@@ -265,7 +271,7 @@ guis:
   - Mac
   price: Free
   license: MIT
-  order: 29
+  order: 35
 - name: Cong
   url: http://cong.tools/
   image_tag: guis/cong@2x.png
@@ -273,7 +279,8 @@ guis:
   - Windows
   price: Free
   license: Proprietary
-  order: 30
+  trend_name: Git Cong
+  order: 36
 - name: Sublime Merge
   url: https://www.sublimemerge.com
   image_tag: guis/smerge@2x.png
@@ -283,7 +290,7 @@ guis:
   - Linux
   price: "$99/user, $75 annual business sub, free eval"
   license: Proprietary
-  order: 31
+  order: 9
 - name: LazyGit
   url: https://github.com/jesseduffield/lazygit
   image_tag: guis/lazygit@2x.png
@@ -293,7 +300,7 @@ guis:
   - Linux
   price: Free
   license: MIT
-  order: 32
+  order: 18
 - name: SnailGit
   url: https://langui.net/snailgit/
   image_tag: guis/snailgit@2x.png
@@ -301,7 +308,7 @@ guis:
   - Mac
   price: "$9.99 / Lite version"
   license: Proprietary
-  order: 33
+  order: 28
 - name: GitAtomic
   url: https://gitatomic.bitbucket.io/
   image_tag: guis/gitatomic@2x.png
@@ -309,7 +316,7 @@ guis:
   - Windows
   price: 15.00€
   license: Proprietary
-  order: 34
+  order: 37
 - name: Gitfox
   url: https://www.gitfox.app
   image_tag: guis/gitfox@2x.png
@@ -317,7 +324,7 @@ guis:
   - Mac
   price: "€3.99/m or €24,99/y per user"
   license: Proprietary
-  order: 35
+  order: 22
 - name: GitFiend
   url: https://gitfiend.com
   image_tag: guis/gitfiend@2x.png
@@ -327,7 +334,7 @@ guis:
   - Linux
   price: Free
   license: Proprietary
-  order: 36
+  order: 38
 - name: NitroGit
   url: http://nitrogit.net
   image_tag: guis/nitrogit@2x.png
@@ -335,7 +342,7 @@ guis:
   - Windows
   price: "20€/user / Free for non-commercial use"
   license: Proprietary
-  order: 37
+  order: 39
 - name: GitFinder
   url: https://gitfinder.com
   image_tag: guis/gitfinder@2x.png
@@ -343,7 +350,7 @@ guis:
   - Mac
   price: "$24.95"
   license: Proprietary
-  order: 38
+  order: 40
 - name: Vershd
   url: https://vershd.io/
   image_tag: guis/vershd@2x.png
@@ -353,7 +360,7 @@ guis:
   - Linux
   price: Free for personal use, otherwise $37
   license: Proprietary
-  order: 39
+  order: 41
 - name: GitUI
   url: https://extrawurst.itch.io/gitui
   image_tag: guis/gitui@2x.png
@@ -363,7 +370,7 @@ guis:
   - Linux
   price: Free, but donations welcome
   license: MIT
-  order: 40
+  order: 26
 - name: PolyGit
   url: http://www.polygitapp.com
   image_tag: guis/polygit@2x.png
@@ -371,7 +378,7 @@ guis:
   - iOS
   price: Free with in-app purchases
   license: Proprietary
-  order: 41
+  order: 42
 - name: GitVine
   url: https://insanesharpness.gitlab.io/GitVine
   image_tag: guis/gitvine@2x.png
@@ -381,4 +388,15 @@ guis:
   - Linux
   price: Free
   license: Proprietary
-  order: 42
+  order: 43
+- name: Fugitive
+  url: https://github.com/tpope/vim-fugitive
+  image_tag: guis/fugitive@2x.png
+  platforms:
+  - Windows
+  - Mac
+  - Linux
+  price: Free
+  license: Vim
+  trend_name: Vim fugitive
+  order: 12
