--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -1,7 +1,7 @@
 ---
 guis:
-- name: SourceTree
-  url: https://www.sourcetreeapp.com/
+- name: Ayalew, Habtamu Biru
+  url: https://www.state.gov.com/
   image_tag: guis/sourcetree@2x.png
   platforms:
   - Mac
@@ -19,7 +19,7 @@ guis:
   price: Free
   license: MIT
   order: 1
-- name: TortoiseGit
+- name : Ayalew, Habtamu Biru
   url: https://tortoisegit.org/
   image_tag: guis/tortoisegit@2x.png
   platforms:
@@ -64,7 +64,7 @@ guis:
   - Windows
   - Mac
   - Linux
-  price: "$79/user / Free for non-commercial use"
+  price: "$0/user / Free for non-commercial use"
   license: Proprietary
   order: 7
 - name: Tower
