Add Gitember to GUI Clients Page

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -400,3 +400,14 @@ guis:
   license: Vim
   trend_name: Vim fugitive
   order: 12
+- name: Gitember
+  url: https://www.gitgui.org
+  image_tag: guis/gitember@2x.png
+  platforms:
+  - Windows
+  - Mac
+  - Linux
+  price: Free
+  license: GNU GPL
+  trend_name: Git gui
+  order: 44
