Add MeGit based on EGit to GUIs

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -84,7 +84,7 @@ guis:
   - Mac
   price: Free
   license: GNU GPL
-  order: 10
+  order: 11
 - name: GitEye
   url: http://www.giteyeapp.com/
   image_tag: guis/giteye@2x.png
@@ -161,7 +161,7 @@ guis:
   - Linux
   price: Free
   license: Proprietary
-  order: 23
+  order: 28
 - name: Fork
   url: https://git-fork.com/
   image_tag: guis/fork@2x.png
@@ -171,7 +171,7 @@ guis:
   price: $49.99, free evaluation
   license: Proprietary
   trend_name: Fork Git client
-  order: 13
+  order: 12
 - name: Working Copy
   url: https://workingcopyapp.com/
   image_tag: guis/workingcopy@2x.png
@@ -180,7 +180,7 @@ guis:
   price: Free with in-app purchases
   license: Proprietary
   trend_name: Working Copy iOS
-  order: 20
+  order: 22
 - name: CodeReview
   url: https://github.com/FabriceSalvaire/CodeReview/
   image_tag: guis/codereview@2x.png
@@ -217,7 +217,7 @@ guis:
   - Linux
   price: Free
   license: MIT
-  order: 11
+  order: 13
 - name: Pocket Git
   url: http://pocketgit.com/
   image_tag: guis/pocketgit@2x.png
@@ -233,7 +233,7 @@ guis:
     - iOS
   price: Free with in-app purchases
   license: Proprietary
-  order: 32
+  order: 37
 - name: GitX-dev
   url: https://rowanj.github.io/gitx/
   image_tag: guis/gitx@2x.png
@@ -262,7 +262,7 @@ guis:
   price: Free
   license: GNU GPL
   trend_name: Git guitar
-  order: 16
+  order: 20
 - name: RepoZ
   url: https://github.com/awaescher/RepoZ/
   image_tag: guis/repoz@2x.png
@@ -290,7 +290,7 @@ guis:
   - Linux
   price: "$99/user, $75 annual business sub, free eval"
   license: Proprietary
-  order: 9
+  order: 10
 - name: LazyGit
   url: https://github.com/jesseduffield/lazygit
   image_tag: guis/lazygit@2x.png
@@ -308,7 +308,7 @@ guis:
   - Mac
   price: "$9.99 / Lite version"
   license: Proprietary
-  order: 28
+  order: 32
 - name: GitAtomic
   url: https://gitatomic.bitbucket.io/
   image_tag: guis/gitatomic@2x.png
@@ -316,7 +316,7 @@ guis:
   - Windows
   price: 15.00€
   license: Proprietary
-  order: 37
+  order: 39
 - name: Gitfox
   url: https://www.gitfox.app
   image_tag: guis/gitfox@2x.png
@@ -324,7 +324,7 @@ guis:
   - Mac
   price: "€3.99/m or €24,99/y per user"
   license: Proprietary
-  order: 22
+  order: 23
 - name: GitFiend
   url: https://gitfiend.com
   image_tag: guis/gitfiend@2x.png
@@ -342,7 +342,7 @@ guis:
   - Windows
   price: "20€/user / Free for non-commercial use"
   license: Proprietary
-  order: 39
+  order: 40
 - name: GitFinder
   url: https://gitfinder.com
   image_tag: guis/gitfinder@2x.png
@@ -350,7 +350,7 @@ guis:
   - Mac
   price: "$24.95"
   license: Proprietary
-  order: 40
+  order: 41
 - name: Vershd
   url: https://vershd.io/
   image_tag: guis/vershd@2x.png
@@ -360,7 +360,7 @@ guis:
   - Linux
   price: Free for personal use, otherwise $37
   license: Proprietary
-  order: 41
+  order: 42
 - name: GitUI
   url: https://extrawurst.itch.io/gitui
   image_tag: guis/gitui@2x.png
@@ -378,7 +378,7 @@ guis:
   - iOS
   price: Free with in-app purchases
   license: Proprietary
-  order: 42
+  order: 44
 - name: GitVine
   url: https://insanesharpness.gitlab.io/GitVine
   image_tag: guis/gitvine@2x.png
@@ -399,4 +399,15 @@ guis:
   price: Free
   license: Vim
   trend_name: Vim fugitive
-  order: 12
+  order: 16
+- name: MeGit (based on EGit)
+  url: https://github.com/eclipsesource/megit
+  image_tag: guis/megit@2x.png
+  platforms:
+  - Windows
+  - Mac
+  - Linux
+  price: Free
+  license: EPL2.0
+  trend_name: egit
+  order: 9
