--- a/.github/ISSUE_TEMPLATE/downloads.yml
+++ b/.github/ISSUE_TEMPLATE/downloads.yml
@@ -1,6 +1,6 @@
 ---
-name: Downloads on [git-scm](https://git-scm.com/) not working
-description: If you are experiencing problems downloading Git from [git-scm.com](https://git-scm.com/downloads).
+name: Downloads on [git-scm.com](https://git-scm.com) not working
+description: If you are experiencing problems downloading Git from [git-scm.com/downloads](https://git-scm.com/downloads).
 labels: [bug]
 
 body:
