Update Gitfox images and meta info in GUI list

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -322,8 +322,9 @@ guis:
   image_tag: guis/gitfox@2x.png
   platforms:
   - Mac
-  price: "€3.99/m or €24,99/y per user"
+  price: "€39,99/year or €79,99 once"
   license: Proprietary
+  trend_name: Gitfox Git Client
   order: 23
 - name: GitFiend
   url: https://gitfiend.com
