added new gui 'gitgui'

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -412,3 +412,13 @@ guis:
   license: EPL2.0
   trend_name: egit
   order: 9
+- name: Gitgui
+  url: https://github.com/jjustra/gitgui
+  image_tag: guis/gitgui@2x.png
+  platforms:
+  - Windows
+  - Mac
+  - Linux
+  price: Free
+  license: MIT
+  order: 45
