--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -218,6 +218,16 @@ guis:
   price: Free
   license: MIT
   order: 13
+- name: Gittyup
+  url: https://github.com/Murmele/Gittyup
+  image_tag: guis/gittyup@2x.png
+  platforms:
+  - Windows
+  #- Mac
+  - Linux  
+  price: Free
+  license: MIT
+  order: 46
 - name: Pocket Git
   url: http://pocketgit.com/
   image_tag: guis/pocketgit@2x.png
