Change url to the github page

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -219,7 +219,7 @@ guis:
   license: MIT
   order: 13
 - name: Gittyup
-  url: https://github.com/Murmele/Gittyup
+  url: https://murmele.github.io/Gittyup/
   image_tag: guis/gittyup@2x.png
   platforms:
   - Windows
