--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -431,3 +431,11 @@ guis:
   price: Free
   license: MIT
   order: 45
+- name: GitKlient
+  url: https://github.com/HamedMasafi/GitKlient
+  image_tag: guis/gitklient@2x.png
+  platforms:
+  - Linux
+  price: Free
+  license: GNU GPL
+  order: 47
