Add GitViewer to GUI Clients Page

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -441,3 +441,12 @@ guis:
   license: GNU GPL
   order: 47
   trend_name: kde git klient
+- name: GitViewer
+  url: https://gitviewer.com
+  image_tag: guis/gitviewer@2x.png
+  platforms:
+    - Mac
+    - iOS
+  price: Free with in-app purchases
+  license: Proprietary
+  order: 48
