Update GitKraken pricing
Source: https://www.gitkraken.com/git-client/pricing

Cheapest option is "$4.95 per user/month, paid annually", which amounts to $59/year

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -44,7 +44,7 @@ guis:
   - Windows
   - Mac
   - Linux
-  price: Free / $29 / $49
+  price: Free for local and public repos / $59+/user annually (free 7-day trial)
   license: Proprietary
   order: 5
 - name: Magit
