Update SmartGit pricing
Source: https://www.syntevo.com/smartgit/purchase/

There are other more complex payment options like paying once for a lifetime of usage but with limited updates etc. but $59/user/year seems to me like the only price worth mentioning

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -64,7 +64,7 @@ guis:
   - Windows
   - Mac
   - Linux
-  price: "$79/user / Free for non-commercial use"
+  price: "Free for non-commercial use / $59/user annually"
   license: Proprietary
   order: 7
 - name: Tower
