--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -73,7 +73,7 @@ guis:
   platforms:
   - Windows
   - Mac
-  price: " $69/user (Free 30 day trial)"
+  price: "Free for students and educators / $69/user annually / $99/user annually (Free 30 day trial)"
   license: Proprietary
   trend_name: git tower
   order: 8
