Update GitAhead URL + Mark as no longer under development
Should probably be removed?

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -208,8 +208,8 @@ guis:
   price: Free with in-app purchases
   license: Proprietary
   order: 31
-- name: GitAhead
-  url: https://www.gitahead.com/
+- name: GitAhead (no longer under active development)
+  url: https://gitahead.github.io/gitahead.com/
   image_tag: guis/gitahead@2x.png
   platforms:
   - Windows
