Update Pocket Git price
Asked an EU resident to tell me the price in Euros (and a US resident obliged at the same time), I am seeing the price as 8.10 ILS which is about a middle value (also note that $1.99 possibly does not include taxes)

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -215,7 +215,7 @@ guis:
   image_tag: guis/pocketgit@2x.png
   platforms:
     - Android
-  price: 1.99€
+  price: €2.49 / $1.99
   license: Proprietary
   order: 21
 - name: GitDrive
