Update GitAtomic pricing
Price is per year, not a one-time purchase

Should a client that hasn't been updated in 2 years be removed?

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -250,7 +250,7 @@ guis:
   image_tag: guis/gitatomic@2x.png
   platforms:
   - Windows
-  price: 15.00€
+  price: 15.00€/year
   license: Proprietary
   order: 39
 - name: Gitfox
