Clarify Vershd pricing

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -295,7 +295,7 @@ guis:
   - Windows
   - Mac
   - Linux
-  price: Free for personal use, otherwise $37
+  price: Free for personal use, otherwise $37/year/user
   license: Proprietary
   order: 42
 - name: GitUI
