Clarify PolyGit pricing
https://www.polygitapp.com/pricing/

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -313,7 +313,7 @@ guis:
   image_tag: guis/polygit@2x.png
   platforms:
   - iOS
-  price: Free with in-app purchases
+  price: Free (3 pushes per day) / $15/year (unlimited pushes + extra features)
   license: Proprietary
   order: 44
 - name: GitVine
