Add Anchorpoint to GUI Clients Page

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -115,7 +115,7 @@ guis:
   - Linux
   price: Free
   license: GNU GPL
-  order: 24
+  order: 25
 - name: giggle
   url: https://wiki.gnome.org/Apps/giggle/
   image_tag: guis/giggle@2x.png
@@ -156,7 +156,7 @@ guis:
   price: Free / $19.99
   license: Proprietary
   trend_name: Working Copy iOS
-  order: 22
+  order: 23
 - name: GitAhead (no longer under active development)
   url: https://gitahead.github.io/gitahead.com/
   image_tag: guis/gitahead@2x.png
@@ -270,7 +270,7 @@ guis:
   price: "€39,99/user annually / €79,99 (Free 30-day trial)"
   license: Proprietary
   trend_name: Gitfox Git Client
-  order: 23
+  order: 24
 - name: GitFiend
   url: https://gitfiend.com
   image_tag: guis/gitfiend@2x.png
@@ -389,3 +389,13 @@ guis:
   price: Free / $6.99 (Free 7-day trial)
   license: Proprietary
   order: 48
+- name: Anchorpoint
+  url: https://anchorpoint.app
+  image_tag: guis/anchorpoint@2x.png
+  platforms:
+    - Windows
+    - Mac
+  price: Free / 20€ 
+  license: Proprietary
+  trend_name: anchorpoint
+  order: 22
