Adding CommandGit entry to the end of the guis.yml

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -399,3 +399,12 @@ guis:
   license: Proprietary
   trend_name: anchorpoint
   order: 22
+  - name: CommandGit
+  url: https://CommandGit.com
+  image_tag: guis/CommandGit@2x.png
+  platforms:
+    - Windows
+  price: $5.99/MO (Free 14-day trial)
+  license: Proprietary
+  trend_name: CommandGit
+  order: 49
