--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -408,3 +408,13 @@ guis:
   license: Proprietary
   trend_name: CommandGit
   order: 49
+- name: Gitnuro
+  url: https://gitnuro.jetpackduba.com/
+  image_tag: guis/Gitnuro@2x.png
+  platforms:
+    - Windows
+    - Mac
+    - Linux
+  price: Free
+  license: GNU GPL
+  order: 50
