--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -371,7 +371,7 @@ guis:
   license: MIT
   order: 45
 - name: Git Klient
-  url: https://github.com/HamedMasafi/GitKlient
+  url: https://invent.kde.org/sdk/gitklient
   image_tag: guis/gitklient@2x.png
   platforms:
   - Linux
