--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -408,3 +408,14 @@ guis:
   license: Proprietary
   trend_name: CommandGit
   order: 49
+- name: gitonic
+  url: https://github.com/kr-g/gitonic
+  image_tag: guis/gitonic@2x.png
+  platforms:
+    - Linux
+    - Mac
+    - Windows
+  price: Free
+  license: AGPL-3.0-or-later 
+  trend_name: gitonic
+  order: 50
