replace rubocop-github gem with vanilla rubocop
It doesn't make much sense to use the -github variant, which is designed
for GitHub-specific projects (which we are not). Moreover, they depend
on an old version of rubocop which doesn't know about our more recent
ruby version.

So let's just swap it out for the regular rubocop gem. We'll need to add
the -rails and -performance dependencies ourselves. And while we're
here, we'll bump the targer ruby version in the rubocop file.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,13 +1,9 @@
 require:
   - rubocop-rails
-
-inherit_gem:
-  rubocop-github:
-    - config/default.yml
-    - config/rails.yml
+  - rubocop-performance
 
 AllCops:
-  TargetRubyVersion: 2.7
+  TargetRubyVersion: 3.1
 
 Performance:
   enabled: true
@@ -20,7 +16,4 @@ Rails/HelperInstanceVariable:
   Enabled: false
 
 Rails/TimeZone:
-  Enabled: false
-
-GitHub/InsecureHashAlgorithm:
   Enabled: false
