rubocop: disable Style/Documentation
Sure, it would be nice if every class had more documentation. But I'm
not going to add it right now, so let's disable this warning.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,6 +20,8 @@ Layout:
 
 Style/StringLiterals:
   Enabled: false
+Style/Documentation:
+  Enabled: false
 
 Rails/HelperInstanceVariable:
   Enabled: false
