--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,6 +22,8 @@ Style/StringLiterals:
   Enabled: false
 Style/Documentation:
   Enabled: false
+Layout/LineLength:
+  Enabled: false
 
 Rails/HelperInstanceVariable:
   Enabled: false
