rubocop: disable Style/ConditionalAssignment
I actually find the recommended style harder to read for most instances.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,6 +22,8 @@ Style/StringLiterals:
   Enabled: false
 Style/Documentation:
   Enabled: false
+Style/ConditionalAssignment:
+  Enabled: false
 Layout/LineLength:
   Enabled: false
 
