rubocop: disable Style/IfUnlessModifier
I think either is fine depending on context, and often a full "if" is
more readable.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,6 +24,8 @@ Style/Documentation:
   Enabled: false
 Style/ConditionalAssignment:
   Enabled: false
+Style/IfUnlessModifier:
+  Enabled: false
 Layout/LineLength:
   Enabled: false
 
