rubocop: disable Style/StringConcatenation
Having looked at the suggestions, I think it actually makes things less
readable (e.g., in a sequence of lines which all do '+ "foo"' at the
end, the concatenation makes it more obvious what is going on).

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,6 +26,8 @@ Style/ConditionalAssignment:
   Enabled: false
 Style/IfUnlessModifier:
   Enabled: false
+Style/StringConcatenation:
+  Enabled: false
 Layout/LineLength:
   Enabled: false
 
