rubocop: disable Style/NegatedIf
We have a lot of non-ruby contributors for whom "!" feels more
comfortable. I don't care that much, but I don't see any need to have CI
block their perfectly-fine code.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,6 +28,8 @@ Style/IfUnlessModifier:
   Enabled: false
 Style/StringConcatenation:
   Enabled: false
+Style/NegatedIf:
+  Enabled: false
 Layout/LineLength:
   Enabled: false
 
