rubocop: disable Style/NumericPredicate
Sorry, it's just too ruby-ish for me. I know I'm going to write "foo >
0" and I don't think CI needs to fail for it.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -30,6 +30,8 @@ Style/StringConcatenation:
   Enabled: false
 Style/NegatedIf:
   Enabled: false
+Style/NumericPredicate:
+  Enabled: false
 Layout/LineLength:
   Enabled: false
 
