rubocop: disable Style/TrailingCommaInArrayLiteral
The trailing comma is good style to make diffs shorter when adding new
elements. Likewise for hash literals.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,6 +32,10 @@ Style/NegatedIf:
   Enabled: false
 Style/NumericPredicate:
   Enabled: false
+Style/TrailingCommaInArrayLiteral:
+  Enabled: false
+Style/TrailingCommaInHashLiteral:
+  Enabled: false
 Layout/LineLength:
   Enabled: false
 
