rubocop: disable Style/RegexpLiteral
Maybe my brain is poisoned by too many years of perl, but I find the
slashes easier to read.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -36,6 +36,8 @@ Style/TrailingCommaInArrayLiteral:
   Enabled: false
 Style/TrailingCommaInHashLiteral:
   Enabled: false
+Style/RegexpLiteral:
+  Enabled: false
 Layout/LineLength:
   Enabled: false
 
