rubocop: disable Style/PerlBackrefs
Sorry, I'm putting my foot down here. Though cryptic, they don't seem
hard to read to my perl-addled mind, and the ruby equivalent is so
verbose.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -38,6 +38,8 @@ Style/TrailingCommaInHashLiteral:
   Enabled: false
 Style/RegexpLiteral:
   Enabled: false
+Style/PerlBackrefs:
+  Enabled: false
 Layout/LineLength:
   Enabled: false
 
