rubocop: disable Style/GuardClause
The suggestions it is making make the code less readable.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -42,6 +42,8 @@ Style/RegexpLiteral:
   Enabled: false
 Style/PerlBackrefs:
   Enabled: false
+Style/GuardClause:
+  Enabled: false
 Layout/LineLength:
   Enabled: false
 
