rubocop: disable Style/ClassVars
We have many instances. They probably could all become instance
variables, but I don't want to accidentally break anything, and I do
want rubocop to shut up.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -44,6 +44,8 @@ Style/PerlBackrefs:
   Enabled: false
 Style/GuardClause:
   Enabled: false
+Style/ClassVars:
+  Enabled: false
 Layout/LineLength:
   Enabled: false
 
