--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,10 @@ require:
   - rubocop-rails
   - rubocop-performance
 
+inherit_mode:
+  merge:
+    - Exclude
+
 AllCops:
   TargetRubyVersion: 3.1
   Exclude:
