add git glint gui

--- a/resources/guis.yml
+++ b/resources/guis.yml
@@ -416,7 +416,7 @@ guis:
     - Mac
     - Windows
   price: Free
-  license: AGPL-3.0-or-later 
+  license: AGPL-3.0-or-later
   trend_name: gitonic
   order: 50
 - name: Gitnuro
@@ -429,4 +429,15 @@ guis:
   price: Free
   license: GNU GPL
   order: 51
-
+- name: Glint
+  url: https://glint.info
+  image_tag: guis/git-glint@2x.png
+  platforms:
+    - Windows
+    - Mac
+    - Linux
+  # Free tier can only open up to two repositories at once
+  price: Free / $35/user annually
+  license: Proprietary
+  trend_name: git glint
+  order: 52
