--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: configure Hugo version
+    - name: configure Hugo and Pagefind version
       run: |
         set -x &&
         echo "HUGO_VERSION=$(sed -n 's/^ *hugo_version: *//p' <hugo.yml)" >>$GITHUB_ENV
+        echo "PAGEFIND_VERSION=$(sed -n 's/^ *pagefind_version: *//p' <hugo.yml)" >>$GITHUB_ENV
 
     - name: install Hugo ${{ env.HUGO_VERSION }}
       run: |
@@ -20,6 +21,9 @@ jobs:
 
     - name: run Hugo to build the pages
       run: hugo
+
+    - name: run Pagefind ${{ env.PAGEFIND_VERSION }} to build the search index
+      run: npx -y pagefind@${{ env.PAGEFIND_VERSION }} --site public
 
     - name: build tar archive
       run: cd public && tar czvf ../pages.tar.gz *
