--- a/hugo.yml
+++ b/hugo.yml
@@ -14,6 +14,7 @@ markup:
       unsafe: true
 params:
   hugo_version: 0.134.3
+  pagefind_version: 1.1.1
   latest_version: 2.46.0
   latest_relnote_url: https://raw.github.com/git/git/master/Documentation/RelNotes/2.46.0.txt
   latest_release_date: '2024-07-29'
